--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -6,17 +6,17 @@
 <div class="form-group" >
 <p class="required">
 <label for="id_username">Username:</label>
-<input class="form-control" id="id_username" maxlength="30" name="username" type="text" placeholder="Enter username"/></p>
+<input class="form-control" id="username" maxlength="30" name="username" type="text" placeholder="Enter username"/></p>
 </div>
 <div class="form-group">
 <p class="required">
 <label for="id_email">E-mail:</label>
-<input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
+<input class="form-control" id="email" name="email" type="email" placeholder="Enter email" /></p>
 </div>
 <div class="form-group">
 <p class="required">
 <label for="id_password1">Password:</label>
-<input class="form-control" id="id_password1" name="password" type="password" placeholder="Enter password" /></p>
+<input class="form-control" id="password" name="password" type="password" placeholder="Enter password" /></p>
 </div>
 <div class="form-group">
 <p class="required">
