--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load staticfiles %}
-<script src="{% static "js/jquery-3.3.1.min.js" %}"></script>
+<script src="{% static "js/jquery.min.js" %}"></script>
 <script src="{% static "js/bootstrap.min.js" %}"></script>
 <!-- <script src="{% static "js/jquery.js" %}"></script>
 <script src="{% static "js/rango-ajax.js" %}"></script> -->
@@ -17,10 +17,10 @@
 
       <title>Rango - {% block title %}How to Tango with Django!{% endblock %}</title>
       <!-- Bootstrap core CSS -->
-    <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="http://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+    <link href="{% static "css/dashboard.css" %}" rel="stylesheet">
 
   </head>
 
@@ -82,18 +82,18 @@
      <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+    <script src="{% static "js/jquery.min.js" %}j" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
  <!--
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
  -->
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
-    <script src="http://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
+   <script src="{% static "js/tether.min.js" %}" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <!--
     <script src="http://v4-alpha.getbootstrap.com/assets/js/vendor/holder.min.js"></script>
     -->
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="http://v4-alpha.getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="{% static "js/ie10-viewport-bug-workaround.js" %}"></script>
   </body>
 </html>
